--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <!-- FOOTer  -->
     <section class="footer footer-container center">
         <h4 class="zero">Influencer products</h4>
-        <small>Copyright © 2020 influencer products</small>
+        <small>Copyright © 2022 Rafid Rabbi</small>
         <br>
         <small>All rights reserved</small>
         <br>
